disunity-derive/tests/08-missing-variant-discriminant-val.stderr
error: expected discriminant = N inside of disunity attribute
 --> tests/08-missing-variant-discriminant-val.rs:5:16
  |
5 |     #[disunity(discriminant)]
  |                ^^^^^^^^^^^^
